objects/CPQ_MLG_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_MLGPLUS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPQ MLGPLUS</label>
        <referenceTo>CPQ_MLGPLUS__c</referenceTo>
        <relationshipLabel>CPQ MLG Error Log</relationshipLabel>
        <relationshipName>CPQ_MLG_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject Line Error</fullName>
                </value>
                <value>
                    <fullName>File Format Error</fullName>
                </value>
                <value>
                    <fullName>Attachment Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CPQ MLG Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Type__c</columns>
        <columns>Error_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MLGError-{0000000000}</displayFormat>
        <label>CPQ MLG Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPQ MLG Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>